@@ -663,6 +663,7 @@ define('CONTACT_IM_SKYPE', 2048);
 define('CONTACT_IM_FACEBOOK', 4096);
 define('CONTACT_DISABLED', 16384);
 define('CONTACT_DOCUMENTS', 32768);
+define('CONTACT_REPRESENTATIVE', 65536);
 
 $CONTACTTYPES = array(
     CONTACT_MOBILE          =>	trans('mobile'),
@@ -676,6 +677,7 @@ $CONTACTTYPES = array(
     CONTACT_IM_SKYPE        =>	trans('Skype'),
     CONTACT_IM_FACEBOOK     =>	trans('Facebook'),
     CONTACT_DOCUMENTS		=>	trans('documents'),
+	CONTACT_REPRESENTATIVE	=>	trans('representative'),
 );
 
 define('DISCOUNT_PERCENTAGE', 1);
